diagrams: replace all ASCII art with Excalidraw, update verification footers
- Generate 10 new Excalidraw diagrams replacing ASCII art in chapters
  01, 04, 14, 20, 27, 32, 33, 34, 36 (52 → 62 total diagrams)
- Update 11 chapters from unverified to verified:
  8 conceptual chapters (19, 23, 26, 30, 31, 34, 35, 36)
  3 smoke-tested chapters (25, 32, 33)
- Update site stats: 52 → 62 diagrams in index.html and README.md